--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "22.11.0"
   }
 }
