--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "biome lint ./src",
+    "format": "biome format ./src",
+    "check": "biome check ./src",
+    "lint:fix": "biome lint --apply ./src",
+    "format:fix": "biome format ./src --write",
+    "check:fix": "biome check --apply ./src"
   },
   "dependencies": {
     "next": "15.1.3",
