lefthookインストール

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "lefthook": "^1.10.1",
     "typescript": "^5"
   },
   "volta": {
