--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.6",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
