生成されたCSS型ファイルをvscode上に表示させないように設定&git ignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,9 @@
     "[typescriptreact]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
+    "files.exclude": {
+        "**/node_modules": true,
+        "**/*.module.scss.d.ts": true,
+        "**/*.module.scss.d.ts.map": true,
+    },
 }
