chokidarインストール。大本となるスタイルが削除されたら関連する型ファイルも削除されるように処置・コマンド追加。

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "tsc": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "typed-styled": "hcm src/**/*.module.scss --watch"
+    "watch:clean-css-types": "node chokidar.js",
+    "typed-styled": "npm run watch:clean-css-types & hcm src/**/*.module.scss --watch"
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.6",
@@ -36,6 +37,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chokidar": "^4.0.3",
     "happy-css-modules": "^3.2.0",
     "lefthook": "^1.10.1",
     "sass": "^1.83.4",
