--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "watch:clean-css-types": "node chokidar.js",
-    "typed-styled": "npm run watch:clean-css-types & hcm src/**/*.module.scss --watch"
+    "typed-styled": "npm run watch:clean-css-types & hcm 'src/**/*.module.scss' --watch"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
