--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.formatOnSave": true,
+    "editor.insertSpaces": false,
     "editor.defaultFormatter": "biomejs.biome",
     "editor.codeActionsOnSave": {
         "quickfix.biome": "explicit",
