--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^22.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/youtube": "^0.1.0",
     "chokidar": "^4.0.3",
     "happy-css-modules": "^3.2.0",
     "lefthook": "^1.10.1",
