動画検索文言の変更と動画読み込み発火タイミング変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,4 +20,8 @@
         "**/*.module.scss.d.ts": true,
         "**/*.module.scss.d.ts.map": true,
     },
+    "cSpell.words": [
+        "enablejsapi",
+        "UNSTARTED"
+    ],
 }
