--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
 	"vcs": {
 		"enabled": false,
 		"clientKind": "git",
@@ -7,22 +7,20 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["src/**/*.scss.d.ts"]
+		"includes": ["**", "!**/src/**/*.scss.d.ts"]
 	},
 	"formatter": {
 		"enabled": true,
 		"indentStyle": "tab"
 	},
-	"organizeImports": {
-		"enabled": true
-	},
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
 		"enabled": true,
 		"rules": {
 			"recommended": true,
 			"correctness": {
-        "noUnusedVariables": "error"
-      }
+				"noUnusedVariables": "error"
+			}
 		}
 	},
 	"javascript": {
