--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "jotai": "^2.12.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
@@ -34,6 +35,7 @@
     "@storybook/addon-docs": "^9.0.10",
     "@storybook/addon-onboarding": "^9.0.10",
     "@storybook/nextjs": "^9.0.10",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
