--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "biome lint ./src",
     "format": "biome format ./src",
     "check": "biome check ./src",
-    "lint:fix": "biome lint --apply ./src",
+    "lint:fix": "biome lint ./src --fix",
     "format:fix": "biome format ./src --write",
-    "check:fix": "biome check --apply ./src",
+    "check:fix": "biome check ./src --fix",
     "tsc": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
