--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "stream-checker",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev & npm run typed-styled",
-    "build": "next build",
-    "start": "next start",
-    "lint": "biome lint ./src",
-    "format": "biome format ./src",
-    "check": "biome check ./src",
-    "lint:fix": "biome lint ./src --fix",
-    "format:fix": "biome format ./src --write",
-    "check:fix": "biome check ./src --fix",
-    "tsc": "tsc --noEmit",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "watch:clean-css-types": "node chokidar.js",
-    "typed-styled": "npm run watch:clean-css-types & hcm 'src/**/*.module.scss' --watch"
-  },
-  "dependencies": {
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/themes": "^3.1.6",
-    "jotai": "^2.12.2",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.548.0",
-    "next": "16.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "swr": "^2.3.3"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.2",
-    "@chromatic-com/storybook": "^4.0.0",
-    "@storybook/addon-docs": "^9.0.10",
-    "@storybook/addon-onboarding": "^9.0.10",
-    "@storybook/nextjs": "^9.0.10",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.0.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/youtube": "^0.1.0",
-    "chokidar": "^4.0.3",
-    "happy-css-modules": "^4.0.0",
-    "lefthook": "^2.0.0",
-    "sass": "^1.83.4",
-    "storybook": "^9.0.10",
-    "typescript": "^5"
-  },
-  "volta": {
-    "node": "22.21.0"
-  },
-  "overrides": {
-    "storybook": "$storybook"
-  }
+	"name": "stream-checker",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev & npm run typed-styled",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome lint ./src",
+		"format": "biome format ./src",
+		"check": "biome check ./src",
+		"lint:fix": "biome lint ./src --fix",
+		"format:fix": "biome format ./src --write",
+		"check:fix": "biome check ./src --fix",
+		"tsc": "tsc --noEmit",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"watch:clean-css-types": "node chokidar.js",
+		"typed-styled": "npm run watch:clean-css-types & hcm 'src/**/*.module.scss' --watch"
+	},
+	"dependencies": {
+		"@next/third-parties": "^16.0.1",
+		"@radix-ui/react-icons": "^1.3.2",
+		"@radix-ui/themes": "^3.1.6",
+		"jotai": "^2.12.2",
+		"js-cookie": "^3.0.5",
+		"lucide-react": "^0.548.0",
+		"next": "16.0.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"swr": "^2.3.3"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.2",
+		"@chromatic-com/storybook": "^4.0.0",
+		"@storybook/addon-docs": "^9.0.10",
+		"@storybook/addon-onboarding": "^9.0.10",
+		"@storybook/nextjs": "^9.0.10",
+		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^22.0.0",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/youtube": "^0.1.0",
+		"chokidar": "^4.0.3",
+		"happy-css-modules": "^4.0.0",
+		"lefthook": "^2.0.0",
+		"sass": "^1.83.4",
+		"storybook": "^9.0.10",
+		"typescript": "^5"
+	},
+	"volta": {
+		"node": "22.21.0"
+	},
+	"overrides": {
+		"storybook": "$storybook"
+	}
 }
