--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,23 @@
 {
-    "editor.formatOnSave": true,
-    "editor.insertSpaces": false,
-    "editor.defaultFormatter": "biomejs.biome",
-    "editor.codeActionsOnSave": {
-        "quickfix.biome": "explicit",
-        "source.organizeImports.biome": "explicit"
-    },
-    "[javascript]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-    "files.exclude": {
-        "**/node_modules": true,
-        "**/*.module.scss.d.ts": true,
-        "**/*.module.scss.d.ts.map": true,
-    },
-    "cSpell.words": [
-        "enablejsapi",
-        "UNSTARTED"
-    ],
+	"editor.formatOnSave": true,
+	"editor.insertSpaces": false,
+	"editor.defaultFormatter": "biomejs.biome",
+	"editor.codeActionsOnSave": {
+		"source.fixAll.biome": "explicit"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"files.exclude": {
+		"**/node_modules": true,
+		"**/*.module.scss.d.ts": true,
+		"**/*.module.scss.d.ts.map": true
+	},
+	"cSpell.words": ["enablejsapi", "UNSTARTED"]
 }
