--- a/lefthook.yml
+++ b/lefthook.yml
@@ -42,8 +42,8 @@ pre-commit:
         && npx biome check --no-errors-on-unmatched --files-ignore-unknown=true {staged_files}
         && git update-index --again
 
-pre-push:
-  commands:
-    check:
-      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
-      run: npx biome check --no-errors-on-unmatched --files-ignore-unknown=true {staged_files}
+# pre-push:
+#   commands:
+#     check:
+#       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+#       run: npx biome check --no-errors-on-unmatched --files-ignore-unknown=true {staged_files}
